uridecodebin3: caps property ineffective - not passed to internal decodebin3
The uridecodebin3 caps property doesn't appear to work as advertised, as it isn't passed down to decodebin3, unlike urisourcebin properties that are proxied down to it from uridecodebin3. So it doesn't actually do anything right now, and one would need to use decodebin3 directly or hack it to set the caps property on the appropriate uridecodebin3 GstBin child instead.
Edited by Mart Raudsepp